# zpo_projekt

./: CMakeLists.txt  README.md  main.cpp
include/: factory.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
test/: test_factory_io.cpp  test_reports.cpp
